...
                />

                <View style={{ flex: 1, flexDirection: 'row', alignItems: 'center' }}>
                    <TextInput
                        style={styles.searchBox}
                        placeholder="ค้นหา"
                        testID="search"
                    />
                </View>
                <SegmentedControlTab
                    tabsContainerStyle={styles.tabContainer}
                    tabStyle={styles.tabStyle}
                    tabTextStyle={styles.tabText}
...
                </View>
                <Menu />

                <TouchableOpacity style={[styles.btnLogin, { left: '-35%', top: '-5%', backgroundColor: 'orange' }]} onPress={() => { this.props.navigation.navigate('CreateProfile') }} testID="test">
                    <Text style={[styles.titleButton, { alignItems: 'center', justifyContent: 'center' }]} accessibilityLabel="textpp" >เพิ่ม PP </Text>
                </TouchableOpacity>
                <TouchableOpacity style={[styles.btnLogin, { left: '-35%', top: '-5%' }]} onPress={() => { this.props.navigation.navigate('AddProfile') } } testID="addPP">
                    <Text style={[styles.titleButton, { alignItems: 'center', justifyContent: 'center' }]} accessibilityLabel="textpp" >เพิ่ม PP ใหม่</Text>
                </TouchableOpacity>

            </View>
        )
    }
...
