export const langSearchPPPC = {
    th: {
        RequiredInformation: 'ข้อมูลบังคับ',
        ContactInformation: 'ข้อมูลติดต่อ',
        SalutationEmpty: 'กรุณาระบุคำนำหน้า/ยศ',
        SC: 'ที่ปรึกษาการขาย',
        SM: 'ผู้จัดการขาย',
        Search: 'ค้นหา',
        All: 'ทั้งหมด',
        Required: 'ต้องการ',
        Additional: 'เพิ่มเติม',
        username: 'ชื่อ',
        lastname: 'นามสกุล',
        Email: 'อีเมล',
        PhoneNumber: 'เบอร์ติดต่อ',
        Save: 'บันทึก',
        CANCEL: 'ยกเลิก',
        Yes: 'ใช่',
        No: 'ไม่ใช่',
        EditPP: 'แก้ไข',
        EditPC: 'แก้ไข',
        EditPS: 'แก้ไขลูกค้ามุ่งหวัง',
    
        // DropDown
        PlaceholderEnterYourKeyword: 'กรุณาใส่ข้อมูล',
        DONE: 'บันทึก',
        Close: 'ปิด',
    }
}

